# DevO

./: .env.example  .gitignore  API_KEY_SETUP.md  AUTOMATION_COMPLETE.md  AUTOMATION_GUIDE.md  AUTONOMOUS_COMPLETE.md  AUTO_SETUP_GUIDE.md  CHAT_GUIDE.md  CHAT_IMPLEMENTATION.md  DISTRIBUTION_README.md  DISTRIBUTION_READY.md  INTELLIGENT_AGENT_GUIDE.md  LOCAL_LLM_GUIDE.md  PROJECT_COMPLETION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README_ENHANCED.md  REPAIR_SUMMARY.md  REPOSITORY_OVERVIEW_FIX.md  ReadMe.MD  SETUP_COMPLETE.md  STANDALONE_EXECUTABLE_GUIDE.md  STANDALONE_GUIDE.md  UNIFIED_CHAT_GUIDE.md  UV_BUILD_GUIDE.md  advanced_code_editor_agent.py  advanced_editor.bat  auto_setup.bat  auto_setup.py  automate_pipeline.bat  automate_pipeline.py  automate_pipeline.sh  automation_demo.py  automation_manager.py  autonomous_agent.bat  autonomous_build_agent.py  build-requirements.txt  build_exe.py  build_standalone.bat  (+67 more)
backups/: advanced_code_editor_agent_20250716_072502.diff  advanced_code_editor_agent_20250716_072502.py  auto_setup_20250716_072502.diff  auto_setup_20250716_072502.py  auto_setup_20250716_073010.diff  auto_setup_20250716_073010.py  automate_pipeline_20250716_073010.diff  automate_pipeline_20250716_073010.py  automation_manager_20250716_073010.diff  automation_manager_20250716_073010.py  autonomous_build_agent_20250716_072502.diff  autonomous_build_agent_20250716_072502.py  autonomous_build_agent_20250716_073010.diff  autonomous_build_agent_20250716_073010.py  build_exe_20250716_072502.diff  build_exe_20250716_072502.py  build_exe_20250716_073010.diff  build_exe_20250716_073010.py  build_standalone_20250716_073010.diff  build_standalone_20250716_073010.py  chat_20250716_072502.diff  chat_20250716_073010.diff  chat_20250716_073010.py  demo_20250716_072502.diff  demo_20250716_073010.diff  demo_20250716_073010.py  example_20250716_073010.diff  final_autonomous_agent_20250716_072502.diff  (+18 more)
output/: README.md  (+6 more)
(+2 files in other folders)
