[project]
name = "devo-hackfinity"
version = "1.0.0"
description = "An advanced LLM-powered AI agent tool that automates the process of understanding and containerizing GitHub repositories."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "DevO Team", email = "team@devo.ai"},
]
keywords = ["ai", "containerization", "docker", "repository", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "google-generativeai>=0.3.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "gitpython>=3.1.40",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
build = [
    "pyinstaller>=6.3.0",
    "setuptools>=65.0.0",
    "wheel>=0.38.0",
]

[project.scripts]
devo = "repocontainerizer:main"
repocontainerizer = "repocontainerizer:main"
devochat = "chat:main"

[project.urls]
Homepage = "https://github.com/dheepakshakthi/DevO-Hackfinity"
Repository = "https://github.com/dheepakshakthi/DevO-Hackfinity"
Issues = "https://github.com/dheepakshakthi/DevO-Hackfinity/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
